<resources>
    <string name="app_name">TodoApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email_asterisk">Email*</string>
    <string name="password_asterisk">Password*</string>
    <string name="confirm_password_asterisk">Confirm Password*</string>
    <string name="name_asterisk">Name*</string>
    <string name="hint_enter_email">Enter your email</string>
    <string name="hint_enter_password">Enter your password</string>
    <string name="create_an_account">Create an account</string>
    <string name="create_task">Create  task</string>
    <string name="title_asterisk">Title*</string>
    <string name="all_task">All Tasks</string>
    <string name="search_task">Search tasks</string>
    <string name="description">Description</string>
    <string name="select_category">Select a Category </string>
    <string name="select_date">Select Date </string>
    <string name="select_time">Select Time </string>
    <string name="task_priority">Task priority </string>
    <string name="task_status">Task status </string>
    <string name="set_reminder">Set Reminder </string>
    <string name="user_image_description">User Image </string>
    <string name="logout">Logout </string>
    <string name="your_tasks">Your Tasks </string>
    <string name="completed_tasks">Completed Tasks </string>
    <string name="ok">Ok </string>
    <string name="name">Name </string>
    <string name="reminder_time">reminder time </string>
    <string name="add_category">Add Category </string>
    <string name="add_categories">Add Categories </string>
    <string name="category_name">Category name</string>
    <string name="category_description">Category description</string>
    <string name="create_new">Create new </string>
    <string name="select_categories">Select Categories </string>
    <string name="more_options">More Options</string>
    <string name="import_tasks">Import Tasks</string>
    <string name="all_categories">All Categories</string>
    <string name="icon_all_categories">Icon All Categories</string>
    <string name="create_category">Create Category</string>


</resources>