<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D1CBCB"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <Button
        android:id="@+id/btn_date_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/select_date"/>
    <TextView
        android:id="@+id/tv_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="12/12/1212"
        android:textSize="20sp"
        android:layout_marginLeft="16dp"
        app:layout_constraintTop_toTopOf="@id/btn_date_picker"
        app:layout_constraintBottom_toBottomOf="@id/btn_date_picker"
        app:layout_constraintStart_toEndOf="@id/btn_date_picker"
        />

    <Button
        android:id="@+id/btn_time_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_date_picker"
        android:text="@string/select_time"/>
    <TextView
        android:id="@+id/tv_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="12:16"
        android:textSize="20sp"
        android:layout_marginLeft="16dp"
        app:layout_constraintTop_toTopOf="@id/btn_time_picker"
        app:layout_constraintBottom_toBottomOf="@id/btn_time_picker"
        app:layout_constraintStart_toEndOf="@id/btn_time_picker"
        />

    <Button
        android:id="@+id/btn_select_data_time_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ok"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/btn_time_picker"
        app:layout_constraintStart_toEndOf="@id/btn_time_picker"
        app:layout_constraintEnd_toStartOf="@id/tv_time"/>


</androidx.constraintlayout.widget.ConstraintLayout>