<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.Fragments.MoreFragment">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_more_options_vertical1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.03" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_more_options_vertical2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.97" />
    <TextView
        android:id="@+id/tv_more_option"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/more_options"
        android:layout_margin="16dp"
        android:textStyle="bold"
        android:textColor="@color/teal_700"
        android:textSize="25sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />


    <View
        android:id="@+id/more_option_view_1"
        android:layout_width="match_parent"
        android:layout_margin="5dp"
        android:layout_height="0.5dp"
        android:background="#CDC9C9"
        app:layout_constraintTop_toBottomOf="@id/tv_more_option"
        app:layout_constraintStart_toStartOf="parent"/>




            <ImageView
                android:id="@+id/ic_import_tasks"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_cloud_download_24"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@id/more_option_view_1"
                app:layout_constraintStart_toEndOf="@id/gl_more_options_vertical1"
                tools:ignore="ContentDescription" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:layout_marginStart="16dp"
                android:textStyle="bold"
                android:text="@string/import_tasks"
                app:layout_constraintStart_toEndOf="@id/ic_import_tasks"
                app:layout_constraintTop_toTopOf="@id/ic_import_tasks"
                app:layout_constraintBottom_toBottomOf="@id/ic_import_tasks"/>


            <ImageView
                android:id="@+id/ic_all_categories"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/icon_all_categories"
                android:src="@drawable/ic_category_24"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@id/ic_import_tasks"
                app:layout_constraintStart_toEndOf="@id/gl_more_options_vertical1"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:layout_marginStart="16dp"
                android:textStyle="bold"
                android:text="@string/all_categories"
                app:layout_constraintStart_toEndOf="@id/ic_all_categories"
                app:layout_constraintTop_toTopOf="@id/ic_all_categories"
                app:layout_constraintBottom_toBottomOf="@id/ic_all_categories"/>





</androidx.constraintlayout.widget.ConstraintLayout>