<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView
        android:id="@+id/tv_add_category_bottom_sheet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_category"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <View
        android:id="@+id/bottom_sheet_view_1"
        android:layout_width="match_parent"
        android:layout_margin="5dp"
        android:layout_height="0.5dp"
        android:background="#8A8787"
      app:layout_constraintTop_toBottomOf="@id/tv_add_category_bottom_sheet"
        app:layout_constraintStart_toStartOf="parent"/>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_add_category_bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_add_category_bottom_sheet"
        app:layout_constraintBottom_toTopOf="@+id/bottom_sheet_view_2"
        android:layout_marginTop="10dp"
        />
    <View
        android:id="@+id/bottom_sheet_view_2"
        android:layout_width="match_parent"
        android:layout_margin="5dp"
        android:layout_height="0.5dp"
        android:background="#8A8787"
       app:layout_constraintBottom_toTopOf="@id/btn_select_categories_bottom_sheet"
        app:layout_constraintStart_toStartOf="parent"/>
    <Button
        android:id="@+id/btn_select_categories_bottom_sheet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_categories"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_create_new_category_bottom_sheet"
        />
    <Button
        android:id="@+id/btn_create_new_category_bottom_sheet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_new"
        app:layout_constraintBottom_toBottomOf="@id/btn_select_categories_bottom_sheet"
        app:layout_constraintStart_toEndOf="@id/btn_select_categories_bottom_sheet"
        app:layout_constraintEnd_toEndOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>