<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/clSignUp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.SignupActivity">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_signup_horizontal1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_signup_horizontal2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_signup_horizontal3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.8" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_signup_vertical1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />


    <ImageView
        android:id="@+id/arrow_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:src="@drawable/baseline_arrow_back_24"
        app:layout_constraintStart_toStartOf="@id/gl_signup_vertical1"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_an_account"
        android:layout_marginLeft="16dp"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="@+id/arrow_back"
        app:layout_constraintStart_toEndOf="@+id/arrow_back"
        app:layout_constraintTop_toTopOf="@+id/arrow_back" />

    <ImageView
        android:id="@+id/img_view_signup"
        android:src="@drawable/baseline_account_box_24"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:layout_constraintTop_toBottomOf="@id/gl_signup_horizontal1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/xtv_signup_name"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
       android:layout_margin="16dp"
        android:hint="@string/name_asterisk"
       app:layout_constraintTop_toBottomOf="@+id/gl_signup_horizontal2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.appcompat.widget.AppCompatAutoCompleteTextView
            android:id="@+id/edt_signup_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawableTint="@color/app_default_background"
            android:dropDownVerticalOffset="4dp"
            android:ems="10"
            android:imeOptions="actionNext|flagNoExtractUi"
            android:inputType="textCapSentences"
            android:padding="16dp"
            android:textSize="16dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/xtv_signup_email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/email_asterisk"
        app:layout_constraintTop_toBottomOf="@id/xtv_signup_name"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.appcompat.widget.AppCompatAutoCompleteTextView
            android:id="@+id/edt_signup_email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawableTint="@color/app_default_background"
            android:dropDownVerticalOffset="4dp"
            android:ems="10"
            android:imeOptions="actionNext|flagNoExtractUi"
            android:inputType="textEmailAddress"
            android:padding="16dp"
            android:textSize="16dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tv_select_category"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/password_asterisk"

        app:layout_constraintTop_toBottomOf="@+id/xtv_signup_email"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.appcompat.widget.AppCompatAutoCompleteTextView
            android:id="@+id/edt_signup_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawableTint="@color/black"
            android:dropDownVerticalOffset="4dp"
            android:ems="10"
            android:imeOptions="actionNext|flagNoExtractUi"
            android:inputType="textPassword"
            android:padding="16dp"
            android:textSize="16dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/xtv_signup_confirm_password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/confirm_password_asterisk"

        app:layout_constraintTop_toBottomOf="@+id/tv_select_category"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.appcompat.widget.AppCompatAutoCompleteTextView
            android:id="@+id/edt_signup_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawableTint="@color/black"
            android:dropDownVerticalOffset="4dp"
            android:ems="10"
            android:imeOptions="actionNext|flagNoExtractUi"
            android:inputType="textPassword"
            android:padding="16dp"
            android:textSize="16dp" />

    </com.google.android.material.textfield.TextInputLayout>
    <ImageView
        android:id="@+id/btn_signup_password_visibility"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/ic_visibility_off_24"
        app:layout_constraintTop_toTopOf="@id/tv_select_category"
        app:layout_constraintBottom_toBottomOf="@id/tv_select_category"
        app:layout_constraintStart_toEndOf="@id/tv_select_category"
        android:layout_marginLeft="-35dp"/>


    <Button
        android:id="@+id/btn_create"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Create"
        app:layout_constraintEnd_toEndOf="@id/xtv_signup_confirm_password"
        app:layout_constraintStart_toStartOf="@id/xtv_signup_confirm_password"
        app:layout_constraintTop_toBottomOf="@id/xtv_signup_confirm_password" />

    <TextView
        android:id="@+id/tv_already_have_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="already have an account?"
        android:textColor="@color/black"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toStartOf="@+id/btn_sign_in"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/btn_create"
        app:layout_constraintTop_toBottomOf="@id/btn_create"
        />

    <TextView
        android:id="@+id/btn_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="SignIn"
        android:textColor="#2196F3"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/btn_create"
        app:layout_constraintEnd_toEndOf="@+id/btn_create"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toEndOf="@id/tv_already_have_account"
        />


    <ProgressBar
        android:id="@+id/progress_bar_sign_up"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>