<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.CreateTaskActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_create_task_horizontal1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.1" />


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_create_task_horizontal2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.3" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_create_task_horizontal3"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.8" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_create_task_vertical1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.03" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_create_task_vertical2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.97" />


        <ImageView
            android:id="@+id/arrow_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:src="@drawable/baseline_arrow_back_24"
            app:layout_constraintStart_toStartOf="@id/gl_create_task_vertical1"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_create_task"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:text="@string/create_task"
            android:textColor="@color/black"
            android:textSize="25sp"
            app:layout_constraintBottom_toBottomOf="@+id/arrow_back"
            app:layout_constraintStart_toEndOf="@+id/arrow_back"
            app:layout_constraintTop_toTopOf="@+id/arrow_back" />

        <ImageView
            android:id="@+id/iv_create_task"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="16dp"
            android:scaleType="centerCrop"
            android:src="@drawable/icon_task_default1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_create_task" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/xtv_task_title"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/title_asterisk"
            app:layout_constraintEnd_toEndOf="@id/gl_create_task_vertical2"
            app:layout_constraintStart_toStartOf="@id/gl_create_task_vertical1"
            app:layout_constraintTop_toBottomOf="@+id/iv_create_task">

            <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                android:id="@+id/edt_task_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawableTint="@color/app_default_background"
                android:dropDownVerticalOffset="4dp"
                android:ems="10"
                android:imeOptions="actionNext|flagNoExtractUi"
                android:inputType="textCapSentences"
                android:padding="10dp"
                android:textSize="18sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/xtv_task_description"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/description"
            app:layout_constraintEnd_toStartOf="@+id/gl_create_task_vertical2"
            app:layout_constraintStart_toEndOf="@+id/gl_create_task_vertical1"
            app:layout_constraintTop_toBottomOf="@id/xtv_task_title">


            <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                android:id="@+id/edt_task_description"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawableTint="@color/app_default_background"
                android:dropDownVerticalOffset="4dp"
                android:ems="10"
                android:imeOptions="actionNext|flagNoExtractUi"
                android:inputType="textMultiLine"
                android:padding="16dp"
                android:textSize="16dp" />

        </com.google.android.material.textfield.TextInputLayout>



        <TextView
            android:id="@+id/tv_select_category"
            android:layout_width="0dp"
            android:background="@drawable/background_radius_box"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:hint="@string/select_category"
            android:padding="10dp"
            android:textSize="20sp"
            android:textStyle="bold"
         app:layout_constraintEnd_toStartOf="@id/gl_create_task_vertical2"
            app:layout_constraintStart_toStartOf="@id/gl_create_task_vertical1"
            app:layout_constraintTop_toBottomOf="@+id/xtv_task_description">

        </TextView>

        <TextView
            android:id="@+id/tv_category_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:text="0"
            android:textColor="#3F51B5"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/tv_select_category"
            app:layout_constraintEnd_toStartOf="@id/btn_select_category"
            app:layout_constraintTop_toTopOf="@id/tv_select_category" />


        <ImageView
            android:id="@+id/btn_select_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_add_24"
            app:layout_constraintBottom_toBottomOf="@id/tv_select_category"
            app:layout_constraintEnd_toEndOf="@id/gl_create_task_vertical2"
            app:layout_constraintTop_toTopOf="@id/tv_select_category" />

        <TextView
            android:id="@+id/tv_task_priority"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@drawable/background_radius_box"
            android:hint="@string/task_priority"
            android:padding="10dp"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/gl_create_task_vertical2"
            app:layout_constraintStart_toStartOf="@id/gl_create_task_vertical1"
            app:layout_constraintTop_toBottomOf="@+id/tv_select_category"/>

        <Spinner
            android:id="@+id/spinner_task_priority"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/tv_task_priority"
            app:layout_constraintEnd_toEndOf="@id/gl_create_task_vertical2"
            app:layout_constraintTop_toTopOf="@id/tv_task_priority" />

        <TextView
            android:id="@+id/tv_task_status"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:hint="@string/task_status"
            android:textSize="20sp"
            android:textStyle="bold"
            android:padding="10dp"
            android:background="@drawable/background_radius_box"
            android:visibility="gone"
            app:layout_constraintEnd_toStartOf="@id/gl_create_task_vertical2"
            app:layout_constraintStart_toStartOf="@id/gl_create_task_vertical1"
            app:layout_constraintTop_toBottomOf="@+id/tv_task_priority"/>

        <Spinner
            android:id="@+id/spinner_task_status"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@id/tv_task_status"
            app:layout_constraintEnd_toEndOf="@id/gl_create_task_vertical2"
            app:layout_constraintTop_toTopOf="@id/tv_task_status" />


        <TextView
            android:id="@+id/tv_set_reminder"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:hint="@string/set_reminder"
            android:textSize="20sp"
            android:textStyle="bold"
            android:padding="10dp"
            android:background="@drawable/background_radius_box"
            app:layout_constraintStart_toStartOf="@id/gl_create_task_vertical1"
            app:layout_constraintEnd_toStartOf="@id/gl_create_task_vertical2"
            app:layout_constraintTop_toBottomOf="@+id/tv_task_status"/>

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switch_set_reminder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/tv_set_reminder"
            app:layout_constraintBottom_toBottomOf="@id/tv_set_reminder"
            app:layout_constraintEnd_toStartOf="@id/gl_create_task_vertical2"/>
        <TextView
            android:id="@+id/tv_task_remind_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginRight="12dp"
            android:textColor="#42749A"
            android:text="12:12"
            android:visibility="invisible"
            app:layout_constraintEnd_toStartOf="@id/switch_set_reminder"
            app:layout_constraintTop_toTopOf="@id/tv_set_reminder"
            app:layout_constraintBottom_toBottomOf="@id/tv_set_reminder"/>
        <TextView
            android:id="@+id/tv_barrier_date_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginLeft="10dp"
            android:text=" | "
            android:visibility="invisible"
            app:layout_constraintEnd_toStartOf="@id/tv_task_remind_time"
            app:layout_constraintTop_toTopOf="@id/tv_set_reminder"
            app:layout_constraintBottom_toBottomOf="@id/tv_set_reminder"/>
        <TextView
            android:id="@+id/tv_task_remind_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginLeft="10dp"
            android:textColor="#42749A"
            android:text="12/12/12"
            android:visibility="invisible"
            app:layout_constraintEnd_toStartOf="@id/tv_barrier_date_time"
            app:layout_constraintTop_toTopOf="@id/tv_set_reminder"
            app:layout_constraintBottom_toBottomOf="@id/tv_set_reminder"/>

        <Button
            android:id="@+id/btn_create_task"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Create"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toStartOf="@+id/btn_delete_task_activity"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"

           app:layout_constraintTop_toBottomOf="@id/tv_set_reminder" />


        <Button
            android:id="@+id/btn_delete_task_activity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Delete"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/tv_set_reminder"
            app:layout_constraintStart_toEndOf="@+id/btn_create_task"
            />

        <ProgressBar
            android:id="@+id/progress_bar_create_task"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>



</ScrollView>